Platform 2.50

* Discovery and Balancing HTTPClient

  HttpClientBinder now includes additional bindBalancingHttpClient() methods
  which use URIs provided in configuration.

Platform 2.49

* Library Upgrades

  - Base Docker image to c15-java11:2.29 (was 2.24)

* Maven plugin upgrades
  - modernizer-maven-plugin to 2.2.0 (was 1.8.0)

Platform 2.48

* Library Upgrades

  - Jetty to 9.4.40 (was 9.4.38) (CVE-2021-28163, CVE-2021-28164, CVE-2021-28165)

* Maven

  We fixed the specification for the JaCoCo agent in the dependencyManagment section.

Platform 2.47

* Jetty

  - We reverted Jetty to 9.4.38 due to a bug that causes TLS connection failures.

* Maven

  We now specify a version for the JaCoCo agent in the dependencyManagment section.

* Maven plugin upgrades

  - build-helper-maven-plugin to 3.2.0 (was 3.1.0)
  - maven-resources-plugin to 3.2.0 (was 3.1.0)
  - maven-assembly-plugin to 3.3.0 (was 3.2.0)
  - duplicate-finder-maven-plugin to 1.5.0 (was 1.4.0)
  - spotbugs-maven-plugin to 4.2.2 (was 4.0.0)
  - maven-site-plugin to 3.9.1 (was 3.9.0)
  - docker-maven-plugin to 0.35.0 (was 0.33.0)

* Library Changes

  - guice-multibindings has been removed as it is no longer a standalone library.

Platform 2.46

* Library Upgrades

  - Jetty to 9.4.39 (was 9.4.38) (CVE-2021-28163, CVE-2021-28164, CVE-2021-28165)
  - Base Docker image to c15-java11:2.24 (was 2.22)

Platform 2.44

* Library Upgrades

  - slf4j to 1.7.30 (was 1.7.26)
  - Joda-Time to 2.10.10 (was 2.10.1)
  - Jackson to 2.12.2 (was 2.11.0)
  - hibernate-validator to 6.0.21.Final (was 6.0.18.Final)
  - assertj-core to 3.19.0 (was 3.12.2)
  - assertj-guava to 3.4.0 (was 3.2.1)
  - assertj-db to 2.0.2 (was 1.2.0)
  - Objenesis to 3.1 (was 3.0.1)
  - Mockito to 3.8.0 (was 2.28.2)
  - Hamcrest to 2.2 (was 1.3)
  - byte-buddy to 1.10.22 (was 1.9.13)

Platform 2.43

* Library Upgrades

  - auto-value to 1.7.4 (was 1.6.5)
  - Guava to 30.1 (was 30.0)
  - Guice to 5.0.1 (was 4.2.3)